# TranslatorBot

./: .gitignore  pyproject.toml
ai_workloads/notebooks/: model_evaluations.ipynb  research_docs.md  rknn_model_conversion.ipynb
app/docs/: design.md
app/services/ai_inference_service/: Dockerfile  pyproject.toml
app/services/ai_inference_service/src/: config.py  main.py  model_manager.py  schemas.py
app/services/ai_inference_service/src/model_management/: base.py  config.py  manager.py  model.py  registry.py  schemas.py
app/services/ai_inference_service/src/model_management/loaders/: marian_mt.py
app/services/discord_integration_service/: Dockerfile
